float button mobile scroll fix

--- a/src/Components/FloatingButtons/FloatingButtons.scss
+++ b/src/Components/FloatingButtons/FloatingButtons.scss
@@ -47,7 +47,6 @@
 }
 
 .floatIcon {
-    position: fixed;
     z-index: 2;
 }
 
